--- a/members/H001071.yaml
+++ b/members/H001071.yaml
@@ -16,6 +16,10 @@ contact_form:
     - click_on:
         - value: Submit
           selector: "form.zipform input[type='submit'][value='Submit']"
+    - find:
+      selector: '#ctl00_ctl11_FirstName'
+      options:
+        wait: 1
     - fill_in:
         - name: ctl00$ctl11$FirstName
           selector: "#ctl00_ctl11_FirstName"
